--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <include src="./partials/main.html"></include>
-    <!-- <include src="./partials/footer.html"></include> -->
+    <include src="./partials/footer.html"></include>
 
     <script src="./index.js"></script>
   </body>
