media 960px in progress

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" />
   </head>
-  <body>
+  <body class="body">
     <include src="./partials/main.html"></include>
     <include src="./partials/footer.html"></include>
 
